--- a/index.html
+++ b/index.html
@@ -1,82 +1,82 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<title>Загрузка локального HTML</title>
-<style>
-  html, body {
-    margin: 0; padding: 0; height: 100%; width: 100%;
-    font-family: Arial, sans-serif;
-    background: #fff;
-    overflow: hidden;
-  }
-  #mainPage {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: center;
-  }
-  #dropzone {
-    border: 2px dashed #666;
-    padding: 40px;
-    text-align: center;
-    color: #666;
-    user-select: none;
-    width: 90%;
-    max-width: 500px;
-    margin-bottom: 10px;
-  }
-  #dropzone.hover {
-    border-color: #3A8DFF;
-    color: #3A8DFF;
-  }
-  #fileInput {
-    display: none;
-  }
-  label {
-    background-color: #3A8DFF;
-    color: white;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    user-select: none;
-    margin-bottom: 10px;
-    font-size: 18px;
-  }
-  label:hover {
-    background-color: #005fcc;
-  }
-  #frameContainer {
-    display: none;
-    height: 100%;
-    width: 100%;
-    position: relative;
-  }
-  #frame {
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-  #backBtn {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 10;
-    background-color: #3A8DFF;
-    color: white;
-    border: none;
-    padding: 10px 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  #backBtn:hover {
-    background-color: #005fcc;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>Загрузка локального HTML</title>
+  <style>
+    html, body {
+      margin: 0; padding: 0; height: 100%; width: 100%;
+      font-family: Arial, sans-serif;
+      background: #fff;
+      overflow: hidden;
+    }
+    #mainPage {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+      align-items: center;
+      justify-content: center;
+    }
+    #dropzone {
+      border: 2px dashed #666;
+      padding: 40px;
+      text-align: center;
+      color: #666;
+      user-select: none;
+      width: 90%;
+      max-width: 500px;
+      margin-bottom: 10px;
+    }
+    #dropzone.hover {
+      border-color: #3A8DFF;
+      color: #3A8DFF;
+    }
+    #fileInput {
+      display: none;
+    }
+    label {
+      background-color: #3A8DFF;
+      color: white;
+      padding: 10px 20px;
+      cursor: pointer;
+      border-radius: 5px;
+      user-select: none;
+      margin-bottom: 10px;
+      font-size: 18px;
+    }
+    label:hover {
+      background-color: #005fcc;
+    }
+    #frameContainer {
+      display: none;
+      height: 100%;
+      width: 100%;
+      position: relative;
+    }
+    #frame {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    #backBtn {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+      background-color: #3A8DFF;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    #backBtn:hover {
+      background-color: #005fcc;
+    }
+  </style>
 </head>
 <body>
 
@@ -111,6 +111,74 @@
   }
 
   function handleFile(file) {
+    if (!file.type.includes('html') && !file.name.endsWith('.html')) {
+      alert('Пожалуйста, загрузите HTML-файл');
+      return;
+    }
+    const reader = new FileReader();
+    reader.onload = e => {
+      const html = e.target.result;
+      const blob = new Blob([html], {type: 'text/html'});
+      const url = URL.createObjectURL(blob);
+      frame.src = url;
+      showFrame();
+    };
+    reader.readAsText(file);
+  }
+
+  fileInput.addEventListener('change', () => {
+    if (fileInput.files.length) {
+      handleFile(fileInput.files[0]);
+    }
+  });
+
+  dropzone.addEventListener('dragover', e => {
+    e.preventDefault();
+    dropzone.classList.add('hover');
+  });
+  dropzone.addEventListener('dragleave', e => {
+    e.preventDefault();
+    dropzone.classList.remove('hover');
+  });
+  dropzone.addEventListener('drop', e => {
+    e.preventDefault();
+    dropzone.classList.remove('hover');
+    if (e.dataTransfer.files.length) {
+      handleFile(e.dataTransfer.files[0]);
+    }
+  });
+
+  window.addEventListener('paste', e => {
+    const items = e.clipboardData.items;
+    for (let i = 0; i < items.length; i++) {
+      const item = items[i];
+      if (item.kind === 'file') {
+        const file = item.getAsFile();
+        handleFile(file);
+        e.preventDefault();
+        break;
+      }
+    }
+  });
+
+  backBtn.addEventListener('click', showMain);
+
+  // Проверка URL-параметров
+  function getQueryParam(name) {
+    const urlParams = new URLSearchParams(window.location.search);
+    return urlParams.get(name);
+  }
+
+  const remoteURL = getQueryParam('url');
+  if (remoteURL) {
+    frame.src = remoteURL;
+    showFrame();
+  }
+
+</script>
+
+</body>
+</html>  function handleFile(file) {
     if (!file.type.includes('html') && !file.name.endsWith('.html')) {
       alert('Пожалуйста, загрузите HTML-файл');
       return;
