--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
     frameContainer.style.display = 'none';
     mainPage.style.display = 'flex';
     frame.src = 'about:blank';
-    // Очистить URL параметр, чтобы не загружать снова
     if (history.replaceState) {
       history.replaceState(null, null, window.location.pathname);
     }
@@ -174,7 +173,9 @@
     if (!url) return;
 
     try {
-      const response = await fetch(url);
+      const response = await fetch(url, {
+        headers: { "ngrok-skip-browser-warning": "true" }
+      });
       if (!response.ok) throw new Error("Ошибка загрузки");
       const html = await response.text();
       const blob = new Blob([html], {type: 'text/html'});
