--- a/index.html
+++ b/index.html
@@ -1,196 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<title>Загрузка локального HTML</title>
-<style>
-  html, body {
-    margin: 0; padding: 0; height: 100%; width: 100%;
-    font-family: Arial, sans-serif;
-    background: #fff;
-    overflow: hidden;
-  }
-  #mainPage {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: center;
-  }
-  #dropzone {
-    border: 2px dashed #666;
-    padding: 40px;
-    text-align: center;
-    color: #666;
-    user-select: none;
-    width: 90%;
-    max-width: 500px;
-    margin-bottom: 10px;
-  }
-  #dropzone.hover {
-    border-color: #3A8DFF;
-    color: #3A8DFF;
-  }
-  #fileInput {
-    display: none;
-  }
-  label {
-    background-color: #3A8DFF;
-    color: white;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    user-select: none;
-    margin-bottom: 10px;
-    font-size: 18px;
-  }
-  label:hover {
-    background-color: #005fcc;
-  }
-  #frameContainer {
-    display: none;
-    height: 100%;
-    width: 100%;
-    position: relative;
-  }
-  #frame {
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-  #backBtn {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 10;
-    background-color: #3A8DFF;
-    color: white;
-    border: none;
-    padding: 10px 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  #backBtn:hover {
-    background-color: #005fcc;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>Просмотр HTML</title>
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
+  <iframe id="viewer" src="about:blank"></iframe>
 
-<div id="mainPage">
-  <label for="fileInput">Выбрать файл</label>
-  <input type="file" id="fileInput" accept=".html,text/html" />
-  <div id="dropzone">Или перетащи файл сюда / Вставь Ctrl+V</div>
-</div>
-
-<div id="frameContainer">
-  <button id="backBtn">← Назад</button>
-  <iframe id="frame"></iframe>
-</div>
-
-<script>
-  const dropzone = document.getElementById('dropzone');
-  const frame = document.getElementById('frame');
-  const fileInput = document.getElementById('fileInput');
-  const mainPage = document.getElementById('mainPage');
-  const frameContainer = document.getElementById('frameContainer');
-  const backBtn = document.getElementById('backBtn');
-
-  function showMain() {
-    frameContainer.style.display = 'none';
-    mainPage.style.display = 'flex';
-    frame.src = 'about:blank';
-    if (history.replaceState) {
-      history.replaceState(null, null, window.location.pathname);
-    }
-  }
-
-  function showFrame() {
-    mainPage.style.display = 'none';
-    frameContainer.style.display = 'block';
-  }
-
-  function handleFile(file) {
-    if (!file.type.includes('html') && !file.name.endsWith('.html')) {
-      alert('Пожалуйста, загрузите HTML-файл');
-      return;
-    }
-    const reader = new FileReader();
-    reader.onload = e => {
-      const html = e.target.result;
-      const blob = new Blob([html], {type: 'text/html'});
-      const url = URL.createObjectURL(blob);
-      frame.src = url;
-      showFrame();
-    };
-    reader.readAsText(file);
-  }
-
-  fileInput.addEventListener('change', () => {
-    if (fileInput.files.length) {
-      handleFile(fileInput.files[0]);
-    }
-  });
-
-  dropzone.addEventListener('dragover', e => {
-    e.preventDefault();
-    dropzone.classList.add('hover');
-  });
-  dropzone.addEventListener('dragleave', e => {
-    e.preventDefault();
-    dropzone.classList.remove('hover');
-  });
-  dropzone.addEventListener('drop', e => {
-    e.preventDefault();
-    dropzone.classList.remove('hover');
-    if (e.dataTransfer.files.length) {
-      handleFile(e.dataTransfer.files[0]);
-    }
-  });
-
-  window.addEventListener('paste', e => {
-    const items = e.clipboardData.items;
-    for (let i = 0; i < items.length; i++) {
-      const item = items[i];
-      if (item.kind === 'file') {
-        const file = item.getAsFile();
-        handleFile(file);
-        e.preventDefault();
-        break;
-      }
-    }
-  });
-
-  backBtn.addEventListener('click', showMain);
-
-  // --- Загрузка из url-параметра 'url' (для telegram api) ---
-  async function loadTelegramHTMLFile() {
-    const params = new URLSearchParams(window.location.search);
+  <script>
+    const params = new URLSearchParams(location.search);
     const url = params.get('url');
-    if (!url) return;
 
-    try {
-      const response = await fetch(url, {
-        headers: { "ngrok-skip-browser-warning": "true" }
-      });
-      if (!response.ok) throw new Error("Ошибка загрузки");
-      const html = await response.text();
-      const blob = new Blob([html], {type: 'text/html'});
-      const blobUrl = URL.createObjectURL(blob);
-
-      frame.src = blobUrl;
-      showFrame();
-    } catch (err) {
-      alert("Не удалось загрузить HTML-файл: " + err.message);
+    if (url) {
+      document.getElementById('viewer').src = url;
+    } else {
+      document.body.innerHTML = "<h1 style='text-align:center;'>❌ Не передан параметр ?url=</h1>";
     }
-  }
-
-  loadTelegramHTMLFile();
-
-</script>
-
+  </script>
 </body>
 </html>
