--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
     </style>
 </head>
 <body>
+    <div class="header">
+        <div class="url-display" id="url-display">Загрузка...</div>
+    </div>
+    
     <div class="iframe-container">
         <div class="loading" id="loading">
             <div class="loading-spinner"></div>
